Sat Oct  9 09:03:21 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Only use libcurl if the version is >= 7.11

Sat Oct  9 03:07:35 CEST 2004 (tk)
----------------------------------
  * libclamav/readdb.c: make signature parser more elastic

Fri Oct  8 17:53:30 CEST 2004 (tk)
----------------------------------
  * clamd/others.c: improve poll code in is_fd_connected() (Trog)

Thu Oct  7 16:37:04 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Requirement for ScanMail removed since that is no
  				longer supported in clamd.conf

Thu Oct  7 12:18:59 BST 2004 (trog)
-----------------------------------
  * libclamav/filetypes.c: Add more HTML markers

Thu Oct  7 03:03:26 CEST 2004 (tk)
----------------------------------
  * configure: disable support for readdir_r by default (can be enabled with
	       --enable-readdir_r)

Wed Oct  6 21:36:59 CEST 2004 (tk)
----------------------------------
  * configure: improve --disable-dns behaviour (patch by Tom G. Christensen
	       <tgc*statsbiblioteket.dk>)

Wed Oct  6 20:48:17 CEST 2004 (tk)
----------------------------------
  * freshclam/manager.c: fix download problems with some proxy servers
			 (patch by Alexander Marx <mad-ml*madness.at>)

Wed Oct  6 18:25:46 CEST 2004 (tk)
----------------------------------
  * libclamav/pe.c: do not report I/O error for small files with empty
		    section

Tue Oct  5 16:45:28 BST 2004 (njh)
----------------------------------
  * libclamav:		First draft of RFC1341 code. It is not enabled by
				default. To enable it, locate PARTIAL_DIR
				in libclamav/mbox.c, uncomment the line and set
				that to some nice place.
			Note that it is up to YOU to ensure that the PARTIAL_DIR
				directory is secure and to trim out old files
				in there from time to time.

Tue Oct  5 11:59:09 BST 2004 (njh)
----------------------------------
  * libclamav/message.c:	Faster base64 decoding

Mon Oct  4 14:48:16 BST 2004 (njh)